:tada: Adding explorer page

--- a/Explorer.html
+++ b/Explorer.html
@@ -13,6 +13,35 @@
 <body>
     <header></header>
     <main>
+    <section class="explorersection">
+
+        <div class="assetcs">
+            <img src="Wallpapers/1.png" alt="">
+            <h2>Name</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum modi suscipit voluptas, accusamus libero delectus iure unde animi ullam reiciendis repellat molestias! Voluptas laborum et temporibus sapiente quam nisi.</p>
+            <span class="tags">font</span>
+            <a class="buttonassects" href="" download><i class="fas fa-download"></i></a>
+        </div>
+
+        <div class="assetcs">
+            <img src="Wallpapers/1.png" alt="">
+            <h2>Name</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum modi suscipit voluptas, accusamus libero delectus iure unde animi ullam reiciendis repellat molestias! Voluptas laborum et temporibus sapiente quam nisi.</p>
+            <span class="tags">font</span>
+            <a class="buttonassects" href="" download><i class="fas fa-download"></i></a>
+        </div>
+
+        <div class="assetcs">
+            <img src="Wallpapers/1.png" alt="">
+            <h2>Name</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum modi suscipit voluptas, accusamus libero delectus iure unde animi ullam reiciendis repellat molestias! Voluptas laborum et temporibus sapiente quam nisi.</p>
+            <span class="tags">font</span>
+            <a class="buttonassects" href="" download><i class="fas fa-download"></i></a>
+        </div>
+
+
+
+    </section>
 
     </main>
     <footer>
