:tada: Adding explorer page

--- a/Explorer.html
+++ b/Explorer.html
@@ -1,54 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Explorer</title>
-        <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
-        <link rel="stylesheet" href="./scss/style.css">
-        <link rel="stylesheet" href="./scss/responsive.css">
-        <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Explorer</title>
+    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./scss/responsive.css">
+    <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
+</head>
+
 <body>
     <header></header>
     <main>
-    <section class="explorersection">
+        <section class="alltypes">
+            <button class="all">All</button>
+            <button class="font">Font</button>
+            <button class="assets">Assets</button>
+        </section>
 
-        <div class="assetcs">
-            <img src="Wallpapers/1.png" alt="">
-            <h2>Name</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum modi suscipit voluptas, accusamus libero delectus iure unde animi ullam reiciendis repellat molestias! Voluptas laborum et temporibus sapiente quam nisi.</p>
-            <span class="tags">font</span>
-            <a class="buttonassects" href="" download><i class="fas fa-download"></i></a>
-        </div>
+        <section class="explorersection">
 
-        <div class="assetcs">
-            <img src="Wallpapers/1.png" alt="">
-            <h2>Name</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum modi suscipit voluptas, accusamus libero delectus iure unde animi ullam reiciendis repellat molestias! Voluptas laborum et temporibus sapiente quam nisi.</p>
-            <span class="tags">font</span>
-            <a class="buttonassects" href="" download><i class="fas fa-download"></i></a>
-        </div>
-
-        <div class="assetcs">
-            <img src="Wallpapers/1.png" alt="">
-            <h2>Name</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum modi suscipit voluptas, accusamus libero delectus iure unde animi ullam reiciendis repellat molestias! Voluptas laborum et temporibus sapiente quam nisi.</p>
-            <span class="tags">font</span>
-            <a class="buttonassects" href="" download><i class="fas fa-download"></i></a>
-        </div>
-
-
-
-    </section>
+        </section>
 
     </main>
     <footer>
 
     </footer>
-    
+
 </body>
 <script src="footerandheader.js"></script>
 <script src="Explorer.js"></script>
+
 </html>
