--- a/Explorer.html
+++ b/Explorer.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explorer</title>
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./assets/logo.svg">
     <link rel="stylesheet" href="./scss/style.css">
     <link rel="stylesheet" href="./scss/responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
